kubernetes-manifests/envoy-gatewayclasses.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tigera-gateway
